Fix: configuration refactoring